--- a/scc/style.css
+++ b/scc/style.css
@@ -4,6 +4,7 @@
     font-size:16px;
     line-height:24px;
     font-weight: 400;
+    margin: 0 auto;
   }
   .padding-site{
     padding:0 45px;
@@ -72,7 +73,6 @@
 }
 .dignity_and_pluses{
   background-color: #f5f5f5;
-  width: 100%;
   padding: 50px;
 }
 .h_dignity{
@@ -159,9 +159,7 @@
 }
 .reviews{
   background-color: #f5f5f5;
-  width: 100%;
-  padding: 47px;
-  margin: 0;
+  padding: 44px 25px 44px 26px;
 }
 .h_reviews{
   font-size: 30px;
@@ -281,7 +279,6 @@
     color: rgb(129, 71, 163);
   }
  footer{
-   width: 100%;
    background-color: #445162;
    padding: 54px 250px 46px 250px;
  }
@@ -447,6 +444,31 @@ textarea{
   background-position: center;
   -webkit-background-size: contain;
 }
+.emblems-block{
+display: flex;
+}
+.emblems{
+width: 56px;
+height: 51px;
+background-image: url("https://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/css-sprite-example.png");
+background-size: 696%;;
+}
+.emblems:nth-child(2) {
+background-position: 112px 51px;
+}
+.emblems:nth-child(3) {
+  background-position: 56px 0;
+}
+.emblems:nth-child(4) {
+  background-position: -56px 0;
+}
+.emblems:nth-child(5) {
+  background-position: 167px 52px;
+}
+.emblems:nth-child(6) {
+  background-position: 275px 0;
+}
 .emblems:hover{
-  background-color: rgb(160, 155, 175);
+  background-color: rgb(152, 143, 175);
+  border:1px #4d0b74 solid;
 }
